added polyvr package

--- a/install
+++ b/install
@@ -17,6 +17,7 @@ sudo gdebi -n libvrpn-dev.deb
 sudo gdebi -n libopensg-dev.deb
 sudo gdebi -n libvirtuose-dev.deb
 sudo gdebi -n libcef-dev.deb
+sudo gdebi -n polyvr.deb
 
 fi
 
