fixed missing cg, gdal, openexr libs

--- a/install
+++ b/install
@@ -1,5 +1,23 @@
 #!/bin/bash
 
+
+# auxilliary function to add a ppa only if it exists
+add_ppa() {
+  grep -h "^deb.*$1" /etc/apt/sources.list.d/* > /dev/null 2>&1
+  if [ $? -ne 0 ]
+  then
+    echo "Adding ppa:$1"
+    add-apt-repository -y ppa:$1
+    return 0
+  fi
+
+  echo "ppa:$1 already exists"
+  return 1
+}
+
+add_ppa irie/blender #Blender
+apt-get update
+
 cd ubuntu_14.04
 
 if [ "$1" == "dev" ]; then
