--- a/install
+++ b/install
@@ -15,12 +15,24 @@ add_ppa() {
   return 1
 }
 
-add_ppa irie/blender #Blender
-apt-get update
+# add_ppa irie/blender #Blender
+# apt-get update
 
+. /etc/lsb-release
+
+if [ "$DISTRIB_RELEASE" == "14.04" ]; then
 cd ubuntu_14.04
+echo "14.04"
+fi
 
-if [ "$1" == "dev" ]; then
+if [ "$DISTRIB_RELEASE" == "16.04" ]; then
+cd ubuntu_16.04
+echo "16.04"
+fi
+
+if [ ! -e dependencies ]; then
+exit 1
+fi
 
 while read line
 do
@@ -37,7 +49,5 @@ sudo gdebi -n libvirtuose-dev.deb
 sudo gdebi -n libcef-dev.deb
 sudo gdebi -n libstepcode-dev.deb
 # sudo gdebi -n polyvr.deb
-
-fi
 
 
