--- a/install
+++ b/install
@@ -53,6 +53,7 @@ sudo gdebi -n libvirtuose-dev.deb
 sudo gdebi -n libcef-dev.deb
 sudo gdebi -n libstepcode-dev.deb
 sudo gdebi -n ../ubuntu_16.04/libvive-dev.deb
+sudo gdebi -n ../ubuntu_16.04/libifc-dev.deb
 # sudo gdebi -n polyvr.deb
 
 
