added oce package

--- a/install
+++ b/install
@@ -60,6 +60,7 @@ sudo gdebi -n libstepcode-dev.deb
 sudo gdebi -n ../ubuntu_16.04/libvive-dev.deb
 sudo gdebi -n libifc-dev.deb
 sudo gdebi -n libfreeopcua-dev.deb
+sudo gdebi -n libopc-dev.deb
 # sudo gdebi -n polyvr.deb
 
 
